# p01-sales-pipeline

./: .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml
sales_pipeline/data/raw/: sales_2025-11-10.csv  sales_2025-11-11.csv  sales_2025-11-12.csv  sales_2025-11-13.csv  sales_2025-11-14.csv  sales_2025-11-15.csv  sales_2025-11-16.csv
sales_pipeline/src/: decorators.py  extract.py  load.py  pipeline.py  transform.py  validate.py
